# CUDA---Shallow-water-equations

./: CMakeLists.txt  README  TODO
cmake/: FindGFlags.cmake  FindGLEW.cmake  FindGLog.cmake  FindYAMLCPP.cmake
res/: ca.yaml  dam.yaml  flood.yaml  heightmap.ppm  landscape.yaml  mandelbrot.ppm  palmisland2.ppm  palmisland3.ppm  palmislandtexture.ppm  scene.ppm  spiral.yaml  texture.ppm  tsunami.yaml  wave.ppm  wavescene.yaml
res/ca/: ca512.asc  wave.ppm
res/dam/: dam.ppm  damwave.ppm
res/flood/: flood.ppm  wave.ppm
res/landscape/: heightmap.ppm  wave.ppm
res/palm/: palmisland.ppm
res/shore/: ca512.asc  mis512.asc
res/spiral/: spiral.ppm  wave.ppm
res/tsunami/: shore.ppm  tsunamiwave.ppm
src/: 3d_window.cc  3d_window.h  asc_reader.cc  asc_reader.h  asc_resizer.cc  asc_writer.cc  asc_writer.h  cudaInfo.cu  cudaInfo.h  landscapecreator.cc  landscapecreator.h  landscapereader.cc  landscapereader.h  main.cc  main2.cc  maintest.cc  ppm_reader.cc  ppm_reader.h  ppm_writer.cc  ppm_writer.h  timing.cc  timing.h  types.cc  types.h  wavesceneparser.cc  wavesceneparser.h  wavesimulator.cu  wavesimulator.h
